welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:9: error: ':' expected but identifier found.
def nom(a::Int):Boolean={
         ^in1To10:25: error: identifier expected but '}' found.
 }
 ^