welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def om(a:Int):Boolean={
	if (a<2 || 9<a){
		return true;
	}else{
		return false;
	}
}

def nom(a::Int):Boolean={
	if (0<a && a<11){
		return true;
	}else{
		return false;
	}
}

def in1To10(n:Int, outsideMode:Boolean):Boolean = {
	if(outsideMode==true){
		om(a);
	}else{
		nom(a);
	}
}
